<resources>
    <string name="app_name">FlightGear Joystick</string>
    <string name="title_text">Flight-Gear Simulator Joystick</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="fly_again">Fly Again!</string>
    <string name="goodbye">Good Bye!</string>
    <string name="thank_you">Thank You For Being Our Pilot!</string>
    <string name="rudder_text">Rudder</string>
    <string name="throttle_text">Throttle</string>
    <string name="enter_port">Enter Port:</string>
    <string name="i_e_127_0_0_1">i.e. 127.0.0.1</string>
    <string name="enter_ip">Enter IP:</string>
    <string name="i_e_6400">i.e. 6400</string>
</resources>
