<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/connect_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.connect.ConnectFragment">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/title_text"
            android:textColor="@color/black_text_color"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/connectButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:ellipsize="none"
            android:text="@string/connect_button"
            android:theme="@style/ConnectButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flightGearPort"
            app:layout_constraintVertical_bias="0.664" />

        <TextView
            android:id="@+id/enterIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_ip"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toTopOf="@+id/flightGearIP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.211"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/enterPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_port"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toTopOf="@+id/flightGearPort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flightGearIP"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/flightGearIP"
            android:layout_width="263dp"
            android:layout_height="44dp"
            android:layout_marginTop="160dp"
            android:ems="10"
            android:hint="@string/i_e_127_0_0_1"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/flightGearPort"
            android:layout_width="263dp"
            android:layout_height="44dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/i_e_6400"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flightGearIP" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
