<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controller_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.controller.ControllerFragment">

        <TextView
            android:id="@+id/throttle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_text_color"
            android:textSize="14sp"
            android:textStyle="normal|italic"
            android:visibility="visible"
            android:text="@string/throttle_text"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rudder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black_text_color"
            android:textSize="14sp"
            android:textStyle="normal|italic"
            android:visibility="visible"
            android:text="@string/rudder_text"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rudderSeekBar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="96dp" />


        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/disconnect_button"
            android:theme="@style/DisconnectButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <SeekBar
            android:id="@+id/rudderSeekBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:max="2000"
            android:progress="1000"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/disconnect_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.672" />

        <SeekBar
            android:id="@+id/throttleSeekBar"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="170dp"
            android:max="2000"
            android:progress="0"
            android:rotation="270"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576" />

      <com.example.flightgear_controller_app.screens.controller.Joystick
          android:id="@+id/joystick"
          android:layout_width="372dp"
          android:layout_height="343dp"
          android:layout_marginBottom="320dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

      </com.example.flightgear_controller_app.screens.controller.Joystick>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>